--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -12,9 +12,10 @@
         android:id="@+id/imageView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_gravity="center"
-        app:srcCompat="@android:drawable/stat_sys_vp_phone_call" />
+        android:layout_weight="1"
+        android:background="#39BFBCBC"
+        app:srcCompat="@drawable/shape_circle" />
 
     <LinearLayout
         android:layout_width="0dp"
